--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply pugin:  'jacoco'
 
 group = 'com.parking'
 version = '0.0.1-SNAPSHOT'
@@ -22,6 +23,15 @@ repositories {
 	mavenCentral()
 }
 
+test{
+	jacoco{
+		append = false
+		destinationFile = file("jacoco/jacocoTest.exec")
+	}
+	reports.junitXml.destination = file("jacoco/test-results")
+}
+
+jacocoTestReport.dependsOn(test)
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
