--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply pugin:  'jacoco'
+apply plugin:  'jacoco'
 
 group = 'com.parking'
 version = '0.0.1-SNAPSHOT'
